Comments overflow fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,3 +74,24 @@
   border-radius: 1.5rem;
   margin-bottom: 1px;
 }
+
+.allCommentsWrapper {
+  max-height: 16.5rem;
+  overflow: auto;
+}
+
+.allCommentsWrapper::-webkit-scrollbar {
+  width: 10px;
+}
+
+.allCommentsWrapper::-webkit-scrollbar-track {
+  background: white; 
+}
+ 
+.allCommentsWrapper::-webkit-scrollbar-thumb {
+  background: coral; 
+}
+
+.allCommentsWrapper::-webkit-scrollbar-thumb:hover {
+  background: gray; 
+}
